修复非ILRuntime模式的编译错误

--- a/Tools/cwRsync/Config/rsyncd.conf
+++ b/Tools/cwRsync/Config/rsyncd.conf
@@ -7,7 +7,7 @@ write only = no
 log file =/var/log/rsyncd.log
 fake super = yes
 [Upload]
-path = /home/mac/
-auth users = mac
+path = /home/ubuntu/
+auth users = ubuntu
 secrets file = /etc/rsyncd.secrets
 list = yes
