--- a/Unity/Unity.csproj
+++ b/Unity/Unity.csproj
@@ -165,12 +165,13 @@
     <Compile Include="Assets\Scripts\Base\Object\EntityType.cs" />
     <Compile Include="Assets\Scripts\Base\Object\EventProxy.cs" />
     <Compile Include="Assets\Scripts\Base\Object\EventSystem.cs" />
-    <Compile Include="Assets\Scripts\Base\Object\IAwake.cs" />
-    <Compile Include="Assets\Scripts\Base\Object\ILateUpdate.cs" />
-    <Compile Include="Assets\Scripts\Base\Object\ILoad.cs" />
+    <Compile Include="Assets\Scripts\Base\Object\IAwakeSystem.cs" />
+    <Compile Include="Assets\Scripts\Base\Object\ILateUpdateSystem.cs" />
+    <Compile Include="Assets\Scripts\Base\Object\IDestroySystem.cs" />
+    <Compile Include="Assets\Scripts\Base\Object\ILoadSystem.cs" />
     <Compile Include="Assets\Scripts\Base\Object\ISerializeToEntity.cs" />
-    <Compile Include="Assets\Scripts\Base\Object\IStart.cs" />
-    <Compile Include="Assets\Scripts\Base\Object\IUpdate.cs" />
+    <Compile Include="Assets\Scripts\Base\Object\IStartSystem.cs" />
+    <Compile Include="Assets\Scripts\Base\Object\IUpdateSystem.cs" />
     <Compile Include="Assets\Scripts\Base\Object\Object.cs" />
     <Compile Include="Assets\Scripts\Base\Object\ObjectPool.cs" />
     <Compile Include="Assets\Scripts\Base\Object\ObjectSystemAttribute.cs" />
