继承结构调整，Object->Component->ComponentWithId->Entity 中间加了一层ComponentWithId结构，主要考虑到，大部分组件是不需要Id这一字段的， 但是也有少部分需要，例如玩家的物品背包组件需要单独存数据库，那么这个组件需要Id,需要存数据库的组件都需要继承ComponentWithId

--- a/Unity/Unity.csproj
+++ b/Unity/Unity.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Assets\Scripts\Base\Math\VLine.cs" />
     <Compile Include="Assets\Scripts\Base\Math\VRect.cs" />
     <Compile Include="Assets\Scripts\Base\MultiMap.cs" />
+    <Compile Include="Assets\Scripts\Base\Object\ComponentWithId.cs" />
     <Compile Include="Assets\Scripts\Base\Object\Component.cs" />
     <Compile Include="Assets\Scripts\Base\Object\ComponentAttribute.cs" />
     <Compile Include="Assets\Scripts\Base\Object\ComponentFactory.cs" />
