--- a/Server/Hotfix/Server.Hotfix.csproj
+++ b/Server/Hotfix/Server.Hotfix.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\Model\Server.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Module\Http\" />
+  </ItemGroup>
+
 </Project>
