打包平台默认为None，防止点错

--- a/Unity/Unity.Editor.Plugins.csproj
+++ b/Unity/Unity.Editor.Plugins.csproj
@@ -131,6 +131,9 @@
     <Reference Include="UnityEditor.Android.Extensions">
       <HintPath>C:/Apps/Unity2017.1.3p2/Editor/Data/PlaybackEngines/AndroidPlayer/UnityEditor.Android.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.WebGL.Extensions">
+      <HintPath>C:/Apps/Unity2017.1.3p2/Editor/Data/PlaybackEngines/WebGLSupport/UnityEditor.WebGL.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
       <HintPath>C:/Apps/Unity2017.1.3p2/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
     </Reference>
