--- a/Unity/Hotfix/Unity.Hotfix.csproj
+++ b/Unity/Hotfix/Unity.Hotfix.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Module\Message\SessionWrapComponent.cs" />
     <Compile Include="Module\Message\SessionWrap.cs" />
     <Compile Include="Module\ModuleEvent\EventCenterController.cs" />
+    <Compile Include="Module\ModuleEvent\MonoEventComponent.cs" />
     <Compile Include="Module\UI\IUIFactory.cs" />
     <Compile Include="Module\Message\MessageDispatherComponent.cs" />
     <Compile Include="Module\Message\OpcodeTypeComponent.cs" />
