--- a/Unity/Hotfix/Assembly-CSharp-Hotfix.csproj
+++ b/Unity/Hotfix/Assembly-CSharp-Hotfix.csproj
@@ -18,71 +18,102 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>..\Temp\UnityVS_bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;ILRuntime</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
     <OutputPath>..\Temp\UnityVS_bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;ILRuntime</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Threading, Version=1.0.2856.102, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Assets\CSharp vNext Support\AsyncTools\Plugins\System.Threading.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\..\..\Applications\Unity\Unity.app\Contents\Managed\UnityEngine.dll</HintPath>
+      <HintPath>C:\Apps\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>C:\Apps\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\..\..\Applications\Unity\Unity.app\Contents\UnityExtensions\Unity\GUISystem\UnityEngine.UI.dll</HintPath>
+      <HintPath>C:\Apps\Unity\Editor\Data\UnityExtensions\Unity\GUISystem\UnityEngine.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>C:\Apps\Unity\Editor\Data\UnityExtensions\Unity\GUISystem\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\Event\EventIdType.cs" />
     <Compile Include="Base\Event\IEvent.cs" />
     <Compile Include="Base\Helper\ArrayHelper.cs" />
     <Compile Include="Base\Helper\AssetBundleHelper.cs" />
     <Compile Include="Base\Helper\ExceptionHelper.cs" />
-    <Compile Include="Base\Message\AMHandler.cs" />
-    <Compile Include="Base\Message\IMHandler.cs" />
+    <Compile Include="Base\Helper\JsonHelper.cs" />
+    <Compile Include="Base\Helper\Log.cs" />
+    <Compile Include="Base\Object\ComponentWithId.cs" />
+    <Compile Include="Base\Object\IChangeSystem.cs" />
+    <Compile Include="Base\Object\IDestroySystem.cs" />
+    <Compile Include="Base\Object\IStartSystem.cs" />
+    <Compile Include="Module\FrameSync\OperaComponent.cs" />
+    <Compile Include="Entity\Config\UnitConfig.cs" />
+    <Compile Include="Module\FrameSync\TestHotfixSubscribMonoEvent_LogString.cs" />
+    <Compile Include="Module\FrameSync\Actor_CreateUnitsHandler.cs" />
+    <Compile Include="Module\FrameSync\Actor_TestHandler.cs" />
+    <Compile Include="Module\FrameSync\Frame_ClickMapHandler.cs" />
+    <Compile Include="Module\FrameSync\G2C_TestHotfixHandler.cs" />
+    <Compile Include="Module\Config\ACategory.cs" />
+    <Compile Include="Module\Config\IConfig.cs" />
+    <Compile Include="Module\Config\ConfigComponent.cs" />
+    <Compile Include="Module\Config\ConfigHelper.cs" />
+    <Compile Include="Module\Message\IActorMessage.cs" />
+    <Compile Include="Module\Message\HotfixMessageDispatcher.cs" />
+    <Compile Include="Module\Message\IMessage.cs" />
+    <Compile Include="Module\Message\AMHandler.cs" />
+    <Compile Include="Module\Message\IMHandler.cs" />
     <Compile Include="Base\Object\Component.cs" />
     <Compile Include="Base\Object\ComponentFactory.cs" />
-    <Compile Include="Base\Object\Disposer.cs" />
     <Compile Include="Base\Object\Entity.cs" />
-    <Compile Include="Base\Object\EntityFactory.cs" />
     <Compile Include="Base\Object\EntityType.cs" />
-    <Compile Include="Base\Object\IAwake.cs" />
-    <Compile Include="Base\Object\ILateUpdate.cs" />
-    <Compile Include="Base\Object\ILoad.cs" />
+    <Compile Include="Base\Object\IAwakeSystem.cs" />
+    <Compile Include="Base\Object\ILateUpdateSystem.cs" />
+    <Compile Include="Base\Object\ILoadSystem.cs" />
     <Compile Include="Base\Object\ISerializeToEntity.cs" />
-    <Compile Include="Base\Object\IUpdate.cs" />
+    <Compile Include="Base\Object\IUpdateSystem.cs" />
     <Compile Include="Base\Object\Object.cs" />
-    <Compile Include="Base\Object\ObjectEvents.cs" />
+    <Compile Include="Base\Object\EventSystem.cs" />
     <Compile Include="Base\Object\ObjectPool.cs" />
-    <Compile Include="Base\Other\IUIFactory.cs" />
-    <Compile Include="Component\UIComponent.cs" />
-    <Compile Include="Entity\Hotfix.cs" />
+    <Compile Include="Module\Message\SessionWrapComponent.cs" />
+    <Compile Include="Module\Message\SessionWrap.cs" />
+    <Compile Include="Module\UI\IUIFactory.cs" />
+    <Compile Include="Module\Message\MessageDispatherComponent.cs" />
+    <Compile Include="Module\Message\OpcodeTypeComponent.cs" />
+    <Compile Include="Module\UI\UIComponent.cs" />
+    <Compile Include="Entity\Game.cs" />
     <Compile Include="Entity\Scene.cs" />
-    <Compile Include="Entity\UI.cs" />
+    <Compile Include="Module\Message\HotfixMessage.cs" />
+    <Compile Include="Module\UI\UI.cs" />
     <Compile Include="Init.cs" />
+    <Compile Include="Module\Message\HotfixOpcode.cs" />
+    <Compile Include="Module\UI\UIType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\UILobby\Component\UILobbyComponent.cs" />
     <Compile Include="UI\UILobby\Factory\UILobbyFactory.cs" />
     <Compile Include="UI\UILogin\Component\UILoginComponent.cs" />
     <Compile Include="UI\UILogin\Event\InitSceneStart_CreateLoginUI.cs" />
     <Compile Include="UI\UILogin\Factory\UILoginFactory.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Event\" />
-    <Folder Include="Handler\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Assembly-CSharp-firstpass.csproj">
@@ -95,10 +126,14 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"$(ProjectDir)\..\Tools\pdb2mdb.exe" $(TargetFileName)</PostBuildEvent>
+  </PropertyGroup>
   <Target Name="BeforeBuild">
   </Target>
   <Target Name="AfterBuild">
     <Copy SourceFiles="$(OutDir)$(TargetName).dll" DestinationFiles="$(ProjectDir)/../Assets/Res/Code/$(TargetName).dll.bytes" />
+    <Copy SourceFiles="$(OutDir)$(TargetName).pdb" DestinationFiles="$(ProjectDir)/../Assets/Res/Code/$(TargetName).pdb.bytes" />
     <Copy SourceFiles="$(OutDir)$(TargetName).dll.mdb" DestinationFiles="$(ProjectDir)/../Assets/Res/Code/$(TargetName).mdb.bytes" />
   </Target>
 </Project>
