在线人数维护
当前版本 在线组件在realm 服。 考虑接下来转到gate。 每个gate 有自己的在线人数。 realm 通过发送 带有账号信息的actor 消息让gate 维护信息。

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -121,6 +121,7 @@
 
   <ItemGroup>
     <Folder Include="Component\Config\" />
+    <Folder Include="Module\Gate\" />
     <Folder Include="Module\Message\Network\KCP\" />
     <Folder Include="Module\Message\Network\TCP\" />
     <Folder Include="Module\Numeric\" />
